--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -3,12 +3,15 @@
   color: #fff;
   background-color: $mainBlue;
   font-weight: 300;
-  padding: .8rem 1.2rem;
+  padding: .7rem 1.1rem;
   display: inline-block;
+  border-radius: 5px;
 
 
-  &--orange {
+  &--lightBlue {
     background-color: $mainLightBlue;
+    color: $mainBlue;
+
   }
 
   &--large {
