--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -2,43 +2,29 @@
   border-bottom: 10px solid $mainBlue;
   position: relative;
 
-  &__image {
-    display: block;
-  }
-
   &__text-content {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+    /*position: absolute;
+    top: 50%;*/
+    /*transform: translateY(-50%);*/
     left: 0;
     width: 100%;
-    text-align: center;
-    padding-top: 88px;
-
-    @mixin atMedium {
-      padding-top: 60px;
-    }
-  }
-
-  &__title {
-    font-weight: 300;
-    color: $mainBlue;
-    font-size: 2.2rem;
-    margin: 0;
+    text-align: left;
+    padding-top: 75px;
 
     @mixin atSmall {
-      font-size: 4.8rem;
+      padding-top: 120px;
     }
   }
 
   &__subtitle {
     font-weight: 300;
-    color: $mainBlue;
     font-size: 1.5rem;
     margin: 0;
+    text-transform: uppercase;
+
 
     @mixin atSmall {
-      font-size: 2rem;
+      font-size: 1.75rem;
     }
 
     @mixin atMedium {
@@ -46,28 +32,26 @@
     }
 
     @mixin atLarge {
-      font-size: 2.75rem;
+      font-size: 2.5rem;
     }
 
   }
 
   &__description {
-    color: #fff;
     font-size: 1.1rem;
     font-weight: 200;
-    text-shadow: 2px 2px 0 rgba(0, 0, 0, .1);
     max-width: 30rem;
     margin-left: auto;
     margin-right: auto;
-    line-height: 1.5;
+    line-height: 1.7;
 
     @mixin atSmall {
-      font-size: 2rem;
+      font-size: 1.75rem;
       max-width: 75rem;
     }
 
     @mixin atLarge {
-      font-size: 2.25rem;
+      font-size: 2rem;
       max-width: 85rem;
     }
 
