--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -1,7 +1,16 @@
 .primary-nav {
+  padding-top: 10px;
+
+  @mixin atMedium {
+    padding-top: 0;
+  }
 
   &--pull-right {
-    float: right;
+
+    @mixin atMedium {
+      float: right;
+    }
+
   }
 
   ul {
@@ -12,14 +21,34 @@
 
   li {
     list-style: none;
-    float: left;
+    display: inline-block;
     padding-right: 20px;
+
+    @mixin atMedium {
+      float: left;
+      display: block;
+    }
+  }
+
+  li:last-child {
+    padding-right: 0;
+
+    @mixin atMedium {
+      padding-right: 20px;
+    }
   }
 
   a {
     text-decoration: none;
     font-weight: 300;
     display: block;
-    padding: 12px 0;
+    padding: 5px 8px;
+    background-color: rgba($mainBlue, .45);
+
+
+    @mixin atMedium {
+      padding: 12px 0;
+      background-color: transparent;
+    }
   }
 }
