--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -1,19 +1,20 @@
 .section-title {
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 300;
-  text-align: center;
+  text-align: left;
   color: $mainBlue;
+  text-transform: uppercase;
 
   &--white {
     color: #ffff;
   }
 
   @mixin atSmall {
-    font-size: 2.75rem;
+    font-size: 1.75rem;
   }
 
   @mixin atLarge {
-    font-size: 3.75rem;
+    font-size: 2.5rem;
   }
 
   strong {
