--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -3,27 +3,43 @@
   width: 100%;
   position: absolute;
   z-index: 2;
+  transition: all .3s ease-out;
+
+  &--is-expanded {
+    background-color: rgba($mainBlue, .55);
+  }
 
   @mixin atMedium {
+    position: fixed;
     background-color: rgba($mainBlue, .3);
+
+    &--dark {
+      background-color: rgba(19, 63, 76, .85);
+    }
   }
 
   &__btn-container {
-    float: right;
+
+    @mixin atMedium {
+      float: right;
+    }
+
   }
 
   &__logo {
     position: absolute;
-    left: 50%;
-    transform: translateX(-50%) scale(.9);
+    left: 0;
+    transform: /*translateX(-50%)*/ scale(.9);
     transform-origin: 50% 0;
     background-color: #ffff;
-    padding: 10px 20px;
+    padding: 10px 20px 10px 9px;
     top: 0;
+    transition: transform .3s ease-out;
 
     @mixin atSmall {
-      transform: translateX(-50%) scale(1.4);
+      transform: /*translateX(-50%)*/ scale(1.2);
       transform-origin: 50% 0;
+      padding: 10px 20px 10px 31px;
     }
 
     @mixin atMedium {
@@ -31,26 +47,98 @@
       transform: translateX(0);
       padding: 20px 30px;
     }
+
+    .site-header--dark & {
+      transform: scale(.75);
+    }
   }
 
   &__menu-icon {
     width: 20px;
-    height: 20px;
-    background-color: #fff;
+    height: 19px;
     position: absolute;
     top: 10px;
     right: 10px;
+    z-index: 10;
+
+    &::before {
+      content: " ";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 20px;
+      background-color: $mainBlue;
+      height: 3px;
+      transform-origin: 0 0;
+      transition: transform .3s ease-out;
+    }
+
+    &__middle {
+      position: absolute;
+      top: 8px;
+      left: 0;
+      width: 20px;
+      background-color: $mainBlue;
+      height: 3px;
+      transition: all .3s ease-out;
+      transform-origin: 0 50%;
+    }
+
+    &::after {
+      content: " ";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 20px;
+      background-color: $mainBlue;
+      height: 3px;
+      transform-origin: 0 100%;
+      transition: transform .3s ease-out;
+    }
 
     @mixin atMedium {
       display: none;
     }
   }
 
+  &__menu-icon--close-x {
+
+    &::before {
+      transform: rotate(45deg) scaleX(1.25);
+    }
+
+    .site-header__menu-icon__middle {
+      opacity: 0;
+      transform: scaleX(0);
+    }
+
+    &::after {
+      transform: rotate(-45deg) scaleX(1.25) translateY(1px);
+    }
+  }
+
   &__menu-content {
-    display: none;
+    opacity: 0;
+    transform: scale(1.2);
+    z-index: -10;
+    position: relative;
+    padding-top: 90px;
+    text-align: left;
+    transition: all .3s ease-out;
+
 
     @mixin atMedium {
-      display: block;
+      opacity: 1;
+      z-index: 1;
+      padding-top: 0;
+      transform: scale(1);
+
+    }
+
+    &--is-visible {
+      opacity: 1;
+      z-index: 1;
+      transform: scale(1);
     }
   }
 }
