--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -1,17 +1,18 @@
 .page-section {
   padding: 1.2rem 0;
 
-  &--b-padding-large {
-    padding-bottom: 4rem;
+  @mixin atMedium{
+    padding: 3rem 0;
   }
 
-  @mixin atMedium{
-    padding: 4.5rem 0;
+  @mixin atLarge {
+    padding-bottom: 4.5rem;
   }
+
 
   &--blue {
     background: linear-gradient(to top right, rgba($mainBlue, .95) 10%, 50%, rgba(35, 137, 195, .75) 90%);
-
+    padding-top: 0;
   }
 
 }
