--- a/app/assets/styles/modules/_tab.css
+++ b/app/assets/styles/modules/_tab.css
@@ -1,45 +1,53 @@
 .tab {
+  display: block;
   overflow: hidden;
-  border: 1px solid #ccc;
-  background-color: #f1f1f1;
+  border-radius: 5px 5px 0 0;
+  /*border: 1px solid #ccc;
+  border-bottom: transparent;
+  /*background-color: #f1f1f1;*/
+  background-image: linear-gradient(#555,#444);
+  border-bottom-color: #444;
 
   &__tablinks {
+    color: #fff;
     background-color: inherit;
+    /*background-color: #ccc;
+    border: 1px solid #444;*/
+    font-weight: 300;
+    border-radius: 15px;
     float: left;
     border: none;
     outline: none;
     cursor: pointer;
-    padding: 14px 16px;
+    padding: 12px 14px;
     transition: 0.3s;
+    margin: 8px 10px;
   }
 
   &__tablinks:hover {
-    background-color: #ddd;
+    background-color: $mainBlue;
+    border-radius: 25px;
   }
 
   &__tablinks.active {
-    background-color: #ccc;
+    background-size: 100%;
+    background-image: linear-gradient(#222,#444);
+    border-radius: 25px;
+    box-shadow: 0 1px 0 rgba(255,255,255,.2), inset 0 1px 2px rgba(0,0,0,.2);
   }
 
   &__tabcontent {
     display: none;
-    padding: 6px 12px;
-    border: 120px solid #ccc;
+    padding: 15px;
+    padding-bottom: 30px;
     border-top: none;
+    background-size: 100%;
+    background-image: linear-gradient(#222,#444);
+    box-shadow: 0 1px 0 rgba(255,255,255,.2), inset 0 1px 2px rgba(0,0,0,.2);
+    color: #fff;
 
     &--is-visible  {
       display: block;
     }
   }
 }
-
-/*.tabcontent {
-  display: none;
-  padding: 6px 12px;
-  border: 120px solid #ccc;
-  border-top: none;
-
-  &--is-visible  {
-    display: block;
-  }
-}*/
