--- a/app/assets/styles/modules/_feature-item.css
+++ b/app/assets/styles/modules/_feature-item.css
@@ -1,26 +1,14 @@
 .feature-item {
-  padding-left: 75px;
-  position: relative;
-  padding-bottom: 0;
-
-
-  @mixin atMedium {
-    padding-bottom: 2rem;
-  }
-
-  &__icon {
-    position: absolute;
-    left: 0;
-    top: 0;
-  }
+  padding-bottom: 30px;
 
   &__title {
-    font-size: 1.5rem;
-    font-weight: 300;
+    font-size: 1.2rem;
+    font-weight: 500;
     margin-bottom: .8rem;
 
+
     @mixin atSmall {
-      font-size: 1.875rem;
+      font-size: 1.35rem;
     }
   }
 
