--- a/app/assets/styles/modules/_generic-content-container.css
+++ b/app/assets/styles/modules/_generic-content-container.css
@@ -1,9 +1,15 @@
 .generic-content-container {
 
+  &--white {
+    p {
+      color: #fff;
+    }
+  }
+
   p {
     line-height: 1.65;
     font-weight: 300;
-    margin: 0 0 1.8rem 0;
+    margin: 0 0 1rem 0;
 
     @mixin atSmall {
       font-size: 1.125rem;
