--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -2,17 +2,37 @@
   padding: 1.2rem 0;
 
   @mixin atMedium{
-    padding: 3rem 0;
+    padding: 5rem 0;
   }
 
-  @mixin atLarge {
+  /*@mixin atLarge {
     padding-bottom: 4.5rem;
-  }
+  }*/
 
 
   &--blue {
-    background: linear-gradient(to top right, rgba($mainBlue, .95) 10%, 50%, rgba(35, 137, 195, .75) 90%);
-    padding-top: 0;
+    background: linear-gradient(to top left, rgba(0, 91, 183, .95) 10%, 50%, rgba(0, 138, 230, .75) 90%);
+    overflow: hidden;
+    padding: 1.2rem 18px 0 18px;
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+
+    @mixin atMedium {
+      padding: 5rem 50px 0 50px;
+    }
+
+    @mixin atLarge {
+      padding: 5rem 100px 0 100px;
+    }
+  }
+
+  &--light-blue {
+    background: linear-gradient(to bottom, rgba($mainLightBlue, .45) 5%, 30%, #fff);
+  }
+
+  &--border-bottom {
+    border-bottom: 10px solid $mainDarkBlue;
   }
 
 }
