--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -11,7 +11,7 @@
 
   @mixin atMedium {
     position: fixed;
-    background-color: rgba($mainBlue, .3);
+    background-color: #fff /*rgba($mainBlue, .3)*/;
 
     &--dark {
       background-color: rgba($mainDarkBlue, .85);
@@ -31,7 +31,7 @@
     left: 0;
     transform: /*translateX(-50%)*/ scale(.9);
     transform-origin: 50% 0;
-    background-color: #ffff;
+    background-color: #fff;
     padding: 10px 20px 10px 9px;
     top: 0;
     transition: transform .3s ease-out;
@@ -49,7 +49,7 @@
     }
 
     .site-header--dark & {
-      transform: scale(.75);
+      transform: scale(.84);
     }
   }
 
