--- a/app/assets/styles/modules/_tab.css
+++ b/app/assets/styles/modules/_tab.css
@@ -1,50 +1,82 @@
 .tab {
   display: block;
   overflow: hidden;
-  border-radius: 5px 5px 0 0;
-  /*border: 1px solid #ccc;
-  border-bottom: transparent;
-  /*background-color: #f1f1f1;*/
-  background-image: linear-gradient(#555,#444);
-  border-bottom-color: #444;
+  border-radius: 9px 9px 0 0;
+  background-image: linear-gradient(to bottom, #555, 3%, #444);
+  /*border-bottom-color: #444;*/
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-left: 20px solid #fff;
+  /*padding-bottom: 5rem;*/
+
+  &__nav {
+    background-size: 100%;
+    background: #fff;
+    /*border: 1px solid #444;
+    border-bottom-color: #444;
+    border-radius: 5px 5px 0 0;*/
+    list-style: none;
+    line-height: normal;
+    padding: 7px 14px;
+    position: relative;
+    z-index: 1;
+    margin: 0;
+  }
+
+  /*&__icon {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 5px;
+    z-index: 2;
+  }*/
 
   &__tablinks {
-    color: #fff;
-    background-color: inherit;
-    /*background-color: #ccc;
-    border: 1px solid #444;*/
+    display: inline;
+    background-image: inherit;
+    color: #ccc;
+    border: 1 px solid #444;
     font-weight: 300;
-    border-radius: 15px;
-    float: left;
-    border: none;
-    outline: none;
+    padding: 0 10px;
     cursor: pointer;
-    padding: 12px 14px;
-    transition: 0.3s;
-    margin: 8px 10px;
+
   }
 
   &__tablinks:hover {
-    background-color: $mainBlue;
-    border-radius: 25px;
+    /*background-color: $mainBlue;
+    border-radius: 25px;*/
   }
 
   &__tablinks.active {
     background-size: 100%;
-    background-image: linear-gradient(#222,#444);
-    border-radius: 25px;
-    box-shadow: 0 1px 0 rgba(255,255,255,.2), inset 0 1px 2px rgba(0,0,0,.2);
+    background-color: rgba($mainLightBlue, .3);
+    border-bottom: 2px solid $mainLightBlue;
+    color: $mainDarkBlue;
+    padding: 7px 14px 5px 14px;
+    /*box-shadow: 0 1px 0 rgba(255,255,255,.2), inset 0 1px 2px rgba(0,0,0,.2);*/
   }
 
   &__tabcontent {
     display: none;
-    padding: 15px;
-    padding-bottom: 30px;
+    padding: 40px 15px;
     border-top: none;
     background-size: 100%;
     background-image: linear-gradient(#222,#444);
-    box-shadow: 0 1px 0 rgba(255,255,255,.2), inset 0 1px 2px rgba(0,0,0,.2);
     color: #fff;
+
+    textarea {
+      background-color: inherit;
+      color: inherit;
+      border: none;
+      width: 100%;
+      font-family: 'Inconsolata', monospace;
+      font-weight: 300;
+
+      &:focus {
+        outline: none;
+      }
+    }
 
     &--is-visible  {
       display: block;
