--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -6,6 +6,11 @@
   margin-left: auto;
   margin-right: auto;
 
+  @mixin atMedium {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+
   .wrapper {
     padding-left: 0;
     padding-right: 0;
